--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "gray-matter": "^4.0.3",
-    "next": "^14.2.13",
+    "next": "^15.0.1",
     "react": "18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
-    "sass": "^1.38.1"
+    "sass": "^1.38.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.7.2",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
