feat: sitemap code if needed

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "deploy": "yarn install && next build",
     "export": "yarn && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sitemap": "ts-node --esm ./sitemap/sitemap.ts",
+    "validate-sitemap": "node  ./sitemap/validate.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
