--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
     "sass": "^1.38.1",
