--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-github-calendar": "^4.5.3",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
     "sass": "^1.38.1",
