--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "next start",
     "lint": "next lint",
     "sitemap": "ts-node --esm ./sitemap/sitemap.ts",
-    "validate-sitemap": "node  ./sitemap/validate.js"
+    "validate-sitemap": "node  ./sitemap/validate.js",
+    "test": "jest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
@@ -47,11 +48,17 @@
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/jest": "^29.5.14",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "prettier": "^3.3.3",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.0",
+    "ts-node": "^10.9.2",
+    "jsdom": "^26.0.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
